@@ -1,6 +1,11 @@
 # ChangeLog file for sql/src/backends/monet5/merovingian
 # This file is updated with mchangelog
 
+* Wed Nov 21 2012 Fabian Groffen <fabian@monetdb.org>
+- monetdb status now prints the connection uri for each database,
+  when available.  The connections and database path properties have
+  been dropped.
+
 * Tue Nov 20 2012 Fabian Groffen <fabian@cwi.nl>
 - monetdb status now prints last crash date only if the database has
   not been started since.
